Revision history for Perl extension RPi::WiringPi.

2.3613 UNREL
        - added Test::BrewBuild auto testing instructions in the FAQ
        - added t/60-lcd.t for LCD testing (requires setting env vars manually)
        - updated the Test::BrewBuild integration unit testing docs in FAQ

2.3612  2017-04-11
        - added check in cleanup() so we don't throw undef warnings if there
          weren't any pins registered during the program run
        - added DAC test file
        - add parent.pm as a prereq to make things 5.8.9 compliant
        - remove rogue "use feature 'say'" lines from tests for 5.8.9 compliance
        - fixed git links in Makefile.PL. They were pointing to the old p5- repo
        - deleted RPi::WiringPi::LCD, and turned it into a standalone dist,
          RPi::LCD
        - we now require RPi::LCD v2.3601

2.3611  2017-03-26
        - added fritzing and breadboard layout for the ADC/DAC test
          configuration for brewbuild CI
        - clean up Pin::set_interrupt() code to call API code directly
        - fix up tests that require sudo (we now recall the tests with sudo if
          they are not called with it)
        - in pud(), we no longer set the pin to INPUT automatically
        - we now require WiringPi::API 2.3609 due to PUD/Interrupt fixes there
        - added proper interrupt and pud tests
        - in Util::cleanup(), removed the use of sudo for decommissioning pins
        - added t/README file, which specifies the GPIO pins in use for the
          unit test suite
        - added unit test section to FAQ
        - in Interrupt POD, specify that if the handler routine can't be found,
          simply add the full package name to the callback 
          (eg: 'main::callback)

2.3610  2017-03-13
        - added in support in adc() to allow usage of the MCP3008 ADC from
          RPi::ADC::MCP3008 (closes #21)
        - fix typos in some module names we're including